istio/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: shopstack-gateway
  namespace: shopstack
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - shopstack.local
