istio/destinationrule.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: shopstack-frontend-canary
  namespace: shopstack
spec:
  host: shopstack-frontend-canary.shopstack.svc.cluster.local
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2
