istio/virtualservice.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: shopstack
  namespace: shopstack
spec:
  hosts:
    - shopstack.local
  gateways:
    - shopstack-gateway
  http:
    - route:
        - destination:
            host: shopstack-frontend-canary.shopstack.svc.cluster.local
            subset: v1
            port:
              number: 80
          weight: 90
        - destination:
            host: shopstack-frontend-canary.shopstack.svc.cluster.local
            subset: v2
            port:
              number: 80
          weight: 10
      timeout: 3s
      retries:
        attempts: 2
        perTryTimeout: 1s
        retryOn: 5xx,reset,connect-failure,refused-stream
